--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,18 @@
   <head>
     <title>Blog</title>
     <%= csrf_meta_tags %>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <%= render 'layouts/cssimport' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  	<%= render 'layouts/navbar' %>
+    <div id="body" style="margin-top:51px">
+      <%= yield %>
+    </div>
+    <%= render 'layouts/jsimport' %>
   </body>
 </html>
